--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.1.4",
+    "envalid": "^7.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.2.3"
+  },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
@@ -19,8 +25,5 @@
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
-  },
-  "dependencies": {
-    "express": "^4.18.2"
   }
 }
