--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "dotenv": "^16.1.4",
     "envalid": "^7.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.2.3"
+    "mongoose": "^7.2.3",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "eslint": "^8.42.0",
