--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "API for managment of appointments for an orthodontic clinic",
   "main": "dist/server.js",
   "scripts": {
-    "start": "nodemon src/server.ts",
+    "dev": "nodemon src/server.ts",
+    "start": "node dist/server.js",
+    "build": "tsc",
     "lint": "eslint . --ext .ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
