--- a/package.json
+++ b/package.json
@@ -1,47 +1,59 @@
 {
   "name": "appointmentmanagerapi",
   "version": "1.0.0",
-  "description": "API for managment of appointments for an orthodontic clinic",
-  "main": "dist/server.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "dev": "nodemon src/server.ts",
-    "start": "node dist/server.js",
-    "build": "tsc",
     "lint": "eslint . --ext .ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.1.0",
-    "connect-mongo": "^5.0.0",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "date-fns": "^2.30.0",
-    "dotenv": "^16.1.4",
-    "envalid": "^7.3.1",
-    "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "http-errors": "^2.0.0",
-    "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.2.3",
-    "morgan": "^1.10.0"
-  },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/cors": "^2.8.13",
+    "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.7",
-    "@types/http-errors": "^2.0.1",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/morgan": "^1.9.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.9",
-    "@typescript-eslint/parser": "^5.59.9",
-    "eslint": "^8.42.0",
-    "nodemon": "^2.0.22",
+    "@types/morgan": "^1.9.5",
+    "@types/multer": "^1.4.7",
+    "@types/nodemailer": "^6.4.10",
+    "@types/passport": "^1.0.12",
+    "@types/passport-github2": "^1.2.5",
+    "@types/passport-google-oauth20": "^2.0.11",
+    "@types/passport-local": "^1.0.35",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "eslint": "^8.49.0",
+    "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.3"
+    "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "@vercel/blob": "^0.12.5",
+    "axios": "^1.5.0",
+    "bcrypt": "^5.1.1",
+    "connect-mongo": "^5.0.0",
+    "connect-redis": "^7.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "envalid": "^7.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.0.1",
+    "express-session": "^1.17.3",
+    "http-errors": "^2.0.0",
+    "mongoose": "^7.5.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.5",
+    "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "redis": "^4.6.9",
+    "sharp": "^0.32.6",
+    "validate-image-type": "^2.0.0",
+    "yup": "^1.2.0"
   }
 }
